kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/025_weaving_in_kermeta_aspect6.kmt
/* $Id: 025_weaving_in_kermeta_aspect6.kmt,v 1.2 2007-07-20 15:08:11 ftanguy Exp $ */

// Type checking of kermeta weavinf

package weavinginvalidtest6;

require kermeta
require "025_weaving_in_kermeta_aspect6/025_weaving_in_kermeta_aspect6_baseClass.kmt"

using kermeta::standard

@aspect "true"
class C {


		
	attribute a : A // invalid, should fail because this is not a reference like it is defined in the base ...
	attribute c : A
	attribute d : B

}

/* END OF FILE */